--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 /.gitattributes 	export-ignore
 /.gitignore 		export-ignore
 /phpunit.xml 		export-ignore
+/phpcs.xml  		export-ignore
 /README.md      	export-ignore
 /CONTRIBUTING.md   	export-ignore
 /.travis.yml	 	export-ignore
