--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ cache:
   directories:
   - $HOME/.composer/cache/files
 
+services:
+  - mysql
+
 php:
 - 5.6
 - 7.0
@@ -19,10 +22,10 @@ env:
 
 matrix:
   include:
+  - php: 5.6
+    env: LINT=1
   - php: 7.4
     env: WP_VERSION=latest WP_MULTISITE=1 COVERAGE=1
-  - php: 7.4
-    env: LINT=1
 
 before_install:
 - |
